# emy

./: .gitignore  LICENSE  README.md  pyproject.toml
data/sample_docs/: agentic_rag_notes.md
emy/: __init__.py  api.py  cli.py  config.py  embeddings.py  gradio_app.py  jobs_roles.py  jobs_runner.py  jobs_store.py  jobs_types.py  jobs_worker.py  llm.py  orchestrator.py  retriever.py  scoring.py  streamlit_app.py  tools.py  types.py  ui.py  utils.py  vault.py  vision.py
notebooks/: 01_quickstart.ipynb  02_streamlit_colab.ipynb
tests/: test_core.py
